Additional structure refactoring; Created dummy epics, user stories and technical tasks